20191120-0 =============================================================
+ добавлена возможность увеличения максимальной длины текста в отсылаемом
  сообщении до 128к символов (значение по умолчанию - 512 символов);
  функция добавлена для борьбы с любителями написать пост, а потом его
  грохнуть
  эта настройка индивидуальная для каждой ленты, см. описание параметра
  longdesc в README.md
* мелкие внутренние изменения

xxxxxxxx-x =============================================================
! история версий не велась