@@ -1,3 +1,7 @@
+20200512-0 =============================================================
+- исправлена ошибка, из-за которой RSSMailer падал при попытке добавить
+  новую ленту (неверное количество параметров конструктора RSSFeed)
+
 20191120-0 =============================================================
 + добавлена возможность увеличения максимальной длины текста в отсылаемом
   сообщении до 128к символов (значение по умолчанию - 512 символов);
